# awesome-timer

./: .gitignore  README.md  bun.lockb  next.config.mjs  package.json
.github/workflows/: release.yaml
app/: globals.css  layout.tsx  page.tsx
components/: app-toolbar.tsx  context-menu.tsx  dynamic-title-bar.tsx  shell-action-settings.tsx  timer-component.tsx  timer-input.tsx  timer-presets.tsx  timer-settings.tsx  title-bar-with-api.tsx  title-bar.tsx
components/ui/: color-picker.tsx
electron/: main.js  preload.js
lib/: action-templates.ts  format-time.ts  shell-executor-with-api.ts  shell-executor.ts  storage-utils.ts
scripts/: release.js
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
types/: shell-types.ts  tauri.ts  timer-types.ts
